Fix icon squashing with new method (flex-shrink)

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -42,7 +42,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-width: 42px;
+  flex-shrink: 0;
 }
 
 .close-button {
